<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BeerDiary</string>
    <string name="beverage_no_items">No drinks listed, add one with the button below</string>
    <string name="add_beverage">Add a new Beer to this list</string>
    <string name="add_this_beverage">Add to List only</string>
    <string name="beverage_list">Beer List</string>
    <string name="drink_list">Drink List</string>
    <string name="add_drink">View your Beer List</string>
    <string name="edit_beverage">Edit</string>
    <string name="update">Update</string>
    <string name="select_beverage">Select a Beer</string>
    <string name="manage_beverages">Manage Beers</string>
    <string name="filter_label_beverage">Search Beers</string>
    <string name="filter_label_maker">Search Brewers</string>
    <string name="filter_label_tags">Search Tags</string>
    <string name="confirm_drink_delete">Confirm that you want to remove this drink.\n\nThis will still leave it in your beer list.</string>
    <string name="confirm_beverage_delete">Confirm that you want to remove this beer entirely.\n\nThis WILL remove this beer from your drink list and delete ALL details for this beer.</string>
    <string name="beverage_name">Beer Name</string>
    <string name="beverage_maker">Brewer</string>
    <string name="beverage_maker_location">Brewer Location</string>
    <string name="beverage_description">Description</string>
    <string name="menu_export_to_csv">Export SD</string>
    <string name="menu_import_to_csv">Import CSV</string>
    <string name="import_error_no_file">Import Error.  File not found.  Looking for /sdcard/BeerDiary/BeerDiary.csv</string>
    <string name="options">Options</string>
    <string name="menu_view_beverage_list">Search Beer</string>
    <string name="menu_set_theme">Set Theme</string>
    <string name="beverage_tags">Tags</string>
    <string name="beverage_Maker">Brewers</string>
    <string name="beverage_Type">Beers</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="delete_drink">Deleting Drink\n</string>
    <string name="delete_beverage">Deleting Beer\n</string>
    <string name="update_beverage">Updating Beer\n</string>
    <string name="adding_beverage">Adding Beer\n</string>
    <string name="add_drink_to_list">Add Beer</string>
    <string name="add_another">Drink it</string>
    <string name="remove_drink_to_list">Del</string>
    <string name="search_hint">Search</string>
    <string name="preference_select">You must exit BeerDiary and restart it to change the theme.\nSelect a theme:</string>
    <string name="preference_prompt">Choose a theme</string>
    <string name="preference_submit">Save theme setting</string>
    <string name="Version">1.0.9</string>
    <string name="export">Backup to SD</string>
    <string name="cdAddBeer">Add this beer to the Drink List</string>
    <string name="cdDeleteBeer">Delete this beer entry</string>
    <string name="cdCamera">Take a picture of this beer</string>
    <string name="cdAccept">Accept these changes</string>
    <string name="cdPicture"></string>
    <string name="hintTags">hoppy golden refreshing</string>
</resources>
