<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" >              
		<RelativeLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/bottom_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="0dip"
            android:layout_margin="0dip"
            android:layout_alignParentBottom="true" >

			<ImageButton
				android:id="@+id/button_drink_beverage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:background="@android:color/transparent"
				android:contentDescription="@string/cdAddBeer"
				android:src="@drawable/beerplusone" />

			<ImageButton
				android:id="@+id/button_camera"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/button_drink_beverage"
				android:background="@android:color/transparent"
				android:contentDescription="@string/cdCamera"
				android:src="@android:drawable/ic_menu_camera" />

			<ImageButton
				android:id="@+id/button_modify_beverage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:background="@android:color/transparent"
				android:contentDescription="@string/cdAccept"
				android:src="@drawable/save" />

			<ImageButton
				android:id="@+id/button_delete_beverage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_toLeftOf="@id/button_modify_beverage"
				android:background="@android:color/transparent"
				android:contentDescription="@string/cdDeleteBeer"
				android:src="@drawable/delete" />
		</RelativeLayout>
		<ScrollView
			android:layout_width="fill_parent"
            android:layout_height="fill_parent"
          	android:layout_above="@id/bottom_buttons" >
			<LinearLayout 
				xmlns:android="http://schemas.android.com/apk/res/android"
              	android:id="@+id/layout_root"
              	android:orientation="vertical"
              	android:layout_width="fill_parent"
              	android:layout_height="wrap_content"
              	android:padding="8dip" >
    			<TextView 
    				android:text="@string/beverage_name"
              		android:layout_width="wrap_content"
              		android:layout_height="wrap_content"
			  		android:padding="3dip" />
    			<EditText 
    				android:id="@+id/beverage_name"
              		android:layout_width="fill_parent"
              		android:layout_height="wrap_content"
              		android:inputType="textCapWords" />
    			<TextView 
    				android:text="@string/beverage_maker"
    		  		android:layout_width="wrap_content"
              		android:layout_height="wrap_content"
			  		android:padding="3dip" />
    			<AutoCompleteTextView 
    				android:id="@+id/beverage_maker"
              		android:layout_width="fill_parent"
              		android:layout_height="wrap_content"
              		android:inputType="textCapWords" />
    			<TextView 
    				android:text="@string/beverage_maker_location"
    		  		android:layout_width="wrap_content"
              		android:layout_height="wrap_content"
			  		android:padding="3dip" />
    			<EditText 
    				android:id="@+id/beverage_maker_location"
              		android:layout_width="fill_parent"
              		android:layout_height="wrap_content"
        	  		android:inputType="textCapWords" />
    		<TextView 
    				android:text="@string/beverage_description"
    		  		android:layout_width="wrap_content"
              		android:layout_height="wrap_content"
			  		android:padding="3dip" />
    		<EditText 
    				android:id="@+id/beverage_description"
              		android:inputType="textMultiLine"
              		android:layout_width="fill_parent"
              		android:layout_height="wrap_content" />
    		<TextView 	
    				android:text="@string/beverage_tags"
    		  		android:layout_width="wrap_content"
              		android:layout_height="wrap_content"
			  		android:padding="3dip" />

				<EditText
					android:id="@+id/beverage_tags"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="@string/hintTags" />

				<ImageView
					android:id="@+id/beverage_image"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:contentDescription="@string/cdPicture"
					android:src="@drawable/beerlogo" />
    		<TextView 
    				android:id="@+id/beverage_imageUri"
    				android:visibility="gone" 
    		  		android:layout_width="wrap_content"
              		android:layout_height="wrap_content" />
            <TextView 
    				android:id="@+id/beverage_id"
    		  		android:visibility="gone" 
    		  		android:layout_width="wrap_content"
              		android:layout_height="wrap_content" />
		</LinearLayout>
	</ScrollView>	
</RelativeLayout>