<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<LinearLayout android:id="@+id/drink_top_control_bar" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		>
	<TextView android:text="@string/drink_list" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:textSize="22dip" />
	</LinearLayout>
	<LinearLayout android:id="@+id/drink_bottom_control_bar"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal" >
		<Button android:id="@+id/btnAddDrink"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/add_drink" />	
	</LinearLayout>
	<ListView 
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="0dip" 
		android:choiceMode="singleChoice"
		android:layout_below="@id/drink_top_control_bar" 
		android:layout_above="@id/drink_bottom_control_bar"
		android:scrollbars="vertical"></ListView>
	<TextView android:id="@android:id/empty" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/beverage_no_items"
		android:layout_below="@id/drink_top_control_bar" android:layout_above="@id/drink_bottom_control_bar" />
</RelativeLayout>