<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dip"
        android:layout_margin="0dip"
        android:layout_alignParentBottom="true" >

    </RelativeLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_buttons" >
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_root"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dip" >
            <TextView
                android:text="@string/beverage_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip" />
            <EditText
                android:id="@+id/beverage_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
            <TextView
                android:text="@string/beverage_maker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip" />
            <AutoCompleteTextView
                android:id="@+id/beverage_maker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
            <TextView
                android:text="@string/beverage_maker_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip" />
            <EditText
                android:id="@+id/beverage_maker_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />
            <TextView
                android:text="@string/beverage_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip" />
            <EditText
                android:id="@+id/beverage_description"
                android:inputType="textMultiLine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/beverage_imageUri"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/beverage_id"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>